v3.9.0 (XXXX-XX-XX)
-------------------

* Set the limit for ArangoSearch segment size to 256MB during recovery to avoid
  OOM kill in rare cases.

* Cancel ongoing RocksDB compactions on server shutdown.

* Updated Enterprise license behavior: now there will be a one hour period for
  a new deployment to provide the license. After that period, the read-only mode
  will be enforced.

* Added startup options to adjust previously hard-coded parameters for the 
  RocksDB throttle:
  - `--rocksdb.throttle-frequency`: frequency for write-throttle calculations
    (in milliseconds, default value is 60000, i.e. 60 seconds).
  - `--rocksdb.throttle-slots`: number of historic measures to use for throttle
    value calculation (default value is 63).
  - `--rocksdb.throttle-scaling-factor`: adaptiveness scaling factor for write-
    throttle calculations (default value is 17). There is normally no need to
    change this value.
  - `--rocksdb.throttle-max-write-rate`: maximum write rate enforced by the
    throttle (in bytes per second, default value is 0, meaning "unlimited").
    The actual write rate will be the minimum of this value and the value the
    throttle calculation produces.
  - `--rocksdb.throttle-slow-down-writes-trigger`: number of level 0 files whose
    payload is not considered in throttle calculations when penalizing the 
    presence of L0 files. There is normally no need to change this value.

  All these options will only have an effect if `--rocksdb.throttle` is enabled
  (which is the default). The configuration options introduced here use the
  previously hard-coded settings as their default values, so there should not be
  a change in behavior if the options are not adjusted.

* Improve visibility in case of potential data corruption between primary index
  and actual document store in documents column family.

* Fixed BTS-611: In some cases AQL queries, in particular in a cluster, reported