@@ -56,6 +56,10 @@
   db._drop("UnitTestsImportCsvTypesPrecedence");
   db._drop("UnitTestsImportCsvMergeAttributes");
   db._drop("UnitTestsImportCsvNoEol");
+  db._drop("UnitTestsImportDataBatchSizeWithoutHeaderFile");
+  db._drop("UnitTestsImportDataBatchSizeWithoutHeaderFile2");
+  db._drop("UnitTestsImportDataBatchSizeWithHeaderFile");
+  db._drop("UnitTestsImportDataBatchSizeWithHeaderFile2");
   db._drop("UnitTestsImportTsv1");
   db._drop("UnitTestsImportTsv1Gz");
   db._drop("UnitTestsImportTsv2");
@@ -94,6 +98,10 @@
   db._create("UnitTestsImportTsv1Gz");
   db._create("UnitTestsImportTsv2");
   db._create("UnitTestsImportVertex");
+  db._create("UnitTestsImportDataBatchSizeWithoutHeaderFile");
+  db._create("UnitTestsImportDataBatchSizeWithoutHeaderFile2");
+  db._create("UnitTestsImportDataBatchSizeWithHeaderFile");
+  db._create("UnitTestsImportDataBatchSizeWithHeaderFile2");
   db._createEdgeCollection("UnitTestsImportEdge");
   db._createEdgeCollection("UnitTestsImportEdgeGz");
   db._create("UnitTestsImportIgnore");
